# QtCMake

./: CMakeLists.txt  README.md
docs/: HowTo Qt CMake.txt  HowTo Qt GDB.txt  RaposaValeBroker.txt
src/: worker.h
